<resources>
    <string name="app_name">PopTheMovie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbarLabel_outOfTheBox">Out of the box…</string>
    <string name="toolbarLabel_dettaglio">Maggiori informazioni…</string>
    <string name="toolbarLabel_similar">Film simili a me…</string>
    <string name="toolbarLabel_search">"Cerca un nuovo film…"</string>
    <string name="toolbarLabel_listeUtente">"Le mie liste  "</string>
    <string name="film_da_vedere_liste_utente">Film da vedere</string>
    <string name="film_visti_liste_utente">Film visti</string>
    <string name="le_mie_liste_menu">Le mie liste</string>
    <string name="cerca_nuovi_film_menu">Cerca nuovi film</string>
    <string name="simili_a_me_menu">Simili a me</string>
    <string name="out_of_the_box_menu">Out of the box</string>
    <string name="label_shake_suggerimenti">Shake per un nuovo suggerimento!</string>
    <string name="movie_poster_image_description">movie poster</string>
    <string name="info_icon_image_description">info icon</string>
    <string name="visto_button_label">Visto</string>
    <string name="da_vedere_button_label">Da vedere</string>
    <string name="titolo_default_text">titolo</string>
    <string name="genere_default_text">genere</string>
    <string name="durata_default_text">durata</string>
    <string name="registrati_signin_hint">Registrati!</string>
    <string name="nome_signin_hint">Nome</string>
    <string name="cognome_signin_hint">Cognome</string>
    <string name="username_signin_hint">Username</string>
    <string name="password_signin_hint">Password</string>
    <string name="registrati_signin_button">Registrati</string>
    <string name="benvenuto_text_view">Benvenuto in PopTheMovie!</string>
    <string name="username_login_hint">Username</string>
    <string name="password_login_hint">Password</string>
    <string name="accedi_login_button">Accedi</string>
    <string name="registrati_login_button">Registrati</string>
    <string name="title_dettaglio_default_text">title</string>
    <string name="genere_dettaglio_default_text">genere</string>
    <string name="plot_dettaglio_default_text">plot placeholder</string>
</resources>