<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/navigationlisteUtente">

    <fragment
        android:id="@+id/navigationlisteUtente"
        android:name="com.bessy.popthemovie.ListeUtenteFragment"
        android:label="@string/toolbarLabel_listeUtente"
        tools:layout="@layout/fragment_liste_utente" >
        <action
            android:id="@+id/action_listeUtenteFragment_to_dettaglioMovieFragment"
            app:destination="@id/navigationDettaglio" />
        <action
            android:id="@+id/action_navigationlisteUtente_self"
            app:destination="@id/navigationlisteUtente" />
    </fragment>
    <fragment
        android:id="@+id/navigationSearch"
        android:name="com.bessy.popthemovie.SearchFragment"
        android:label="@string/toolbarLabel_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigationSimilar"
        android:name="com.bessy.popthemovie.SimilarMovieFragment"
        android:label="@string/toolbarLabel_similar"
        tools:layout="@layout/fragment_similar_movie" />
    <fragment
        android:id="@+id/navigationOutOfTheBox"
        android:name="com.bessy.popthemovie.OutOfTheBoxMovieFragment"
        android:label="@string/toolbarLabel_outOfTheBox"
        tools:layout="@layout/fragment_out_of_the_box_movie" />
    <fragment
        android:id="@+id/navigationDettaglio"
        android:name="com.bessy.popthemovie.DettaglioMovieFragment"
        android:label="@string/toolbarLabel_dettaglio"
        tools:layout="@layout/fragment_dettaglio_movie" />
</navigation>